# sentient-voice

./: .env.example  AUDIT_REPORT.md  pyproject.toml  requirements.txt  verify_db.py
alembic/: env.py
alembic/versions/: 7926a9f171cb_initial_tables.py
app/: main.py
app/api/endpoints/: dashboard.py
app/api/websocket/: conversation.py
app/core/: config.py  database.py  logging.py  middleware.py  security.py
app/models/: __init__.py  all_models.py  types.py
app/services/pms/: mock_service.py
app/voice_engine/: pipeline.py
app/voice_engine/primitive/: events.py  worker.py
app/voice_engine/workers/: llm.py  synthesizer.py  transcriber.py
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/components/: Dashboard.tsx  LiveCallMonitor.tsx
frontend/lib/: api.ts
scripts/: security_audit.py  test_ws.py
