[project]
name = "sentient-voice"
version = "0.1.0"
description = "HIPAA-compliant Voice AI SaaS"
authors = [
    {name = "SentientVoice Team"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "websockets (>=16.0,<17.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "deepgram-sdk (>=5.3.2,<6.0.0)",
    "groq (>=1.0.0,<2.0.0)",
    "elevenlabs (>=2.33.1,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "cryptography (>=46.0.4,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
